--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR-Code Scanner</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsqr/1.4.0/jsQR.min.js"></script>
+    <script>
+        const params = new URLSearchParams(window.location.search);
+        const song = params.get("song");
+        if (song) {
+            window.location.href = "player.html?song=" + song;
+        }
+    </script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
