--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <p id="result">Scanne einen QR-Code...</p>
 
     <script>
+        .catch((err) => {
+            alert("Fehler: " + err.message);
+        });
         let video = document.getElementById("qr-video");
         let canvas = document.getElementById("qr-canvas");
         let ctx = canvas.getContext("2d");
