--- a/index.html
+++ b/index.html
@@ -4,73 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR-Code Scanner</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsqr/1.4.0/jsQR.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; }
-        video { width: 90%; max-width: 400px; border: 2px solid black; border-radius: 10px; margin-top: 10px; }
-        canvas { display: none; }
+        #reader { width: 300px; margin: auto; }
         button { margin-top: 15px; padding: 10px 20px; font-size: 16px; border: none; background-color: #007bff; color: white; border-radius: 5px; cursor: pointer; }
     </style>
 </head>
 <body>
     <h2>🎵 QR-Code scannen und Song starten</h2>
-    <video id="qr-video" playsinline></video>
-    <canvas id="qr-canvas"></canvas>
-    <button onclick="startScanner()">📷 Scanner starten</button>
+    <div id="reader"></div>
     <p id="result">Scanne einen QR-Code...</p>
+    <button onclick="startScanner()">📷 Scanner starten</button>
 
     <script>
-        let video = document.getElementById("qr-video");
-        let canvas = document.getElementById("qr-canvas");
-        let ctx = canvas.getContext("2d");
-        let resultText = document.getElementById("result");
-
         function startScanner() {
-            if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-                alert("Dein Browser unterstützt keine Kamera-Nutzung!");
-                return;
-            }
+            const scanner = new Html5Qrcode("reader");
 
-            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-                .then((stream) => {
-                    video.srcObject = stream;
-                    video.setAttribute("playsinline", true);
-                    video.play();
-                    scanQRCode();
-                })
-                .catch((err) => {
-                    console.error("Kamera-Zugriff verweigert", err);
-                    alert("Kamera-Zugriff wurde blockiert! Bitte in den Einstellungen aktivieren.");
-                });
-        }
-
-        function scanQRCode() {
-            let scanInterval = setInterval(() => {
-                if (video.readyState === video.HAVE_ENOUGH_DATA) {
-                    canvas.width = video.videoWidth;
-                    canvas.height = video.videoHeight;
-                    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-                    let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-                    let qrCode = jsQR(imageData.data, canvas.width, canvas.height);
-
-                    if (qrCode) {
-                        clearInterval(scanInterval);
-                        let url = qrCode.data.trim();
-                        console.log("QR-Code erkannt:", url);
-                        
-                        if (url.startsWith("http")) {
-                            resultText.innerText = "Song gefunden: " + url;
-                            video.srcObject.getTracks().forEach(track => track.stop()); // Kamera stoppen
-                            setTimeout(() => {
-                                window.location.href = url; // Weiterleitung
-                            }, 1000); // Kleine Verzögerung zur Stabilität
-                        } else {
-                            console.error("Fehler: QR-Code enthält keine gültige URL:", url);
-                            alert("Fehler: Kein gültiger Link erkannt!");
-                        }
-                    }
+            scanner.start(
+                { facingMode: "environment" }, // Nutzt die Rückkamera (falls vorhanden)
+                { fps: 10, qrbox: 250 },
+                (decodedText) => {
+                    console.log("QR-Code erkannt:", decodedText);
+                    document.getElementById("result").innerText = "Song gefunden: " + decodedText;
+                    scanner.stop();
+                    window.location.href = decodedText; // Automatische Weiterleitung
+                },
+                (errorMessage) => {
+                    console.warn("Kein QR-Code erkannt:", errorMessage);
                 }
-            }, 300);
+            ).catch(err => {
+                console.error("Fehler beim Starten des Scanners:", err);
+            });
         }
     </script>
 </body>
