--- a/player.html
+++ b/player.html
@@ -8,11 +8,12 @@
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; padding: 20px; }
         button { margin-top: 15px; padding: 10px 20px; font-size: 16px; border: none; background-color: #28a745; color: white; border-radius: 5px; cursor: pointer; }
         button:hover { background-color: #218838; }
+        iframe { display: none; } /* Versteckt das Video */
     </style>
 </head>
 <body>
     <h2>🎵 Dein Song wird abgespielt</h2>
-    <iframe id="youtubePlayer" width="300" height="200" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+    <iframe id="youtubePlayer" width="0" height="0" frameborder="0" allow="autoplay; encrypted-media"></iframe> <!-- Verstecktes Video -->
     <br>
     <button onclick="window.location.href='index.html'">🔍 Neuen QR-Code scannen</button>
 
@@ -24,7 +25,8 @@
 
         let songId = getSongIdFromUrl();
         if (songId) {
-            document.getElementById("youtubePlayer").src = `https://www.youtube.com/embed/${songId}?autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0&autohide=1&mute=0`;
+            // YouTube Embed-URL anpassen, um nur den Ton abzuspielen
+            document.getElementById("youtubePlayer").src = `https://www.youtube.com/embed/${songId}?autoplay=1&controls=0&modestbranding=1&rel=0&showinfo=0&autohide=1&mute=0&enablejsapi=1`;
         } else {
             document.getElementById("youtubePlayer").innerHTML = "<p>Kein Song ausgewählt!</p>";
         }
