--- a/index.html
+++ b/index.html
@@ -6,10 +6,48 @@
     <title>QR-Code Scanner</title>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; }
-        #reader { width: 300px; margin: auto; }
-        button { margin-top: 15px; padding: 10px 20px; font-size: 16px; border: none; background-color: #007bff; color: white; border-radius: 5px; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        h2 {
+            color: #343a40;
+            font-size: 22px;
+            margin-bottom: 20px;
+        }
+        #reader {
+            width: 90%;
+            max-width: 320px;
+            margin-bottom: 20px;
+            border: 2px solid #007bff;
+            border-radius: 10px;
+            padding: 10px;
+            background: white;
+        }
+        p {
+            font-size: 16px;
+            color: #495057;
+        }
+        button {
+            padding: 12px 24px;
+            font-size: 16px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -24,16 +62,11 @@
 
         function toggleScanner() {
             if (isScannerActive) {
-                if (scanner) {
-                    scanner.stop().then(() => {
-                        console.log("Scanner gestoppt.");
-                        document.getElementById("result").innerText = "Scanner gestoppt";
-                        isScannerActive = false;
-                        document.getElementById("scannerButton").innerText = "📷 Scanner starten";
-                    }).catch((err) => {
-                        console.error("Fehler beim Stoppen des Scanners:", err);
-                    });
-                }
+                scanner.stop().then(() => {
+                    document.getElementById("result").innerText = "Scanner gestoppt";
+                    isScannerActive = false;
+                    document.getElementById("scannerButton").innerText = "📷 Scanner starten";
+                }).catch((err) => console.error("Fehler beim Stoppen des Scanners:", err));
             } else {
                 startScanner();
                 isScannerActive = true;
@@ -43,22 +76,16 @@
 
         function startScanner() {
             scanner = new Html5Qrcode("reader");
-
             scanner.start(
                 { facingMode: "environment" },
                 { fps: 10, qrbox: 250 },
                 (decodedText) => {
-                    console.log("QR-Code erkannt:", decodedText);
                     document.getElementById("result").innerText = "Song gefunden: " + decodedText;
                     scanner.stop();
                     window.location.href = decodedText;
                 },
-                (errorMessage) => {
-                    console.warn("Kein QR-Code erkannt:", errorMessage);
-                }
-            ).catch(err => {
-                console.error("Fehler beim Starten des Scanners:", err);
-            });
+                (errorMessage) => console.warn("Kein QR-Code erkannt:", errorMessage)
+            ).catch(err => console.error("Fehler beim Starten des Scanners:", err));
         }
     </script>
 </body>
