--- a/player.html
+++ b/player.html
@@ -18,12 +18,12 @@
         }
         h2 {
             color: #343a40;
-            font-size: 22px;
+            font-size: 5vw;
             margin-bottom: 20px;
         }
         button {
             padding: 12px 24px;
-            font-size: 16px;
+            font-size: 4vw;
             border: none;
             background-color: #28a745;
             color: white;
@@ -33,6 +33,12 @@
         }
         button:hover {
             background-color: #218838;
+        }
+
+        @media (min-width: 600px) {
+            h2, button {
+                font-size: 22px;
+            }
         }
     </style>
 </head>
