--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         h2 {
             color: #343a40;
-            font-size: 22px;
+            font-size: 5vw; /* Passt sich automatisch der Bildschirmgröße an */
             margin-bottom: 20px;
         }
         #reader {
@@ -32,21 +32,28 @@
             background: white;
         }
         p {
-            font-size: 16px;
+            font-size: 4vw; /* Dynamische Schriftgröße */
             color: #495057;
         }
         button {
             padding: 12px 24px;
-            font-size: 16px;
+            font-size: 4vw; /* Skalierbare Button-Schrift */
             border: none;
             background-color: #007bff;
             color: white;
             border-radius: 8px;
             cursor: pointer;
             transition: background 0.3s;
+            max-width: 250px;
+            width: 80%;
         }
         button:hover {
             background-color: #0056b3;
+        }
+        @media (min-width: 768px) {
+            h2 { font-size: 24px; }
+            p { font-size: 18px; }
+            button { font-size: 18px; }
         }
     </style>
 </head>
