--- a/player.html
+++ b/player.html
@@ -46,7 +46,7 @@
     <h2>🎵 Dein Song wird abgespielt</h2>
     <div id="player"></div>
     <br>
-    <button id="playPauseButton">▶️ Play</button>
+    <button id="playPauseButton">⏸ Pause</button>
     <button onclick="window.location.href='index.html'">🔍 Neuen QR-Code scannen</button>
 
     <script>
